# uptodate

./: .gitignore  Cargo.toml  README.md  org.gnome.UpToDate.desktop  org.gnome.UpToDate.metainfo.xml
data/: org.gnome.UpToDate.appdata.xml  org.gnome.UpToDate.desktop
src/: config.rs  lib.rs  main.rs  updater.rs
src/ui/: mod.rs  style.css  window.rs  window.ui  window_test.rs
