[package]
name = "uptodate"
version = "0.1.0"
edition = "2024"
authors = ["Atay Özcan atayozcan@pm.me"]
description = "A simple application to check for updates"
homepage = "https://github.com/atayozcan/uptodate"
repository = "https://github.com/atayozcan/uptodate"
license = "MIT"

[dependencies]
libadwaita = { version = "0.7", features = ["v1_7"] }
async-std = { version = "1.12", features = ["attributes", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"
glib = "0.20"
gio = "0.20"
toml = "0.9.0"

[dev-dependencies]
tempfile = "3.0"
[[bin]]
name = "uptodate"
path = "src/main.rs"

[lib]
name = "uptodate"
path = "src/lib.rs"

[package.metadata.dbus]
system-bus-name = "org.gnome.UpToDate"
